Fixed pom file